<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_height="fill_parent"
	android:layout_width="fill_parent">
	<LinearLayout
		android:id="@+id/main_title_bar"
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="48sp"
		android:background="@drawable/main_title_bg">
		<LinearLayout
			android:orientation="horizontal"
			android:layout_height="48sp"
			android:gravity="center_vertical"
			android:layout_width="wrap_content">
			<ImageView
				android:layout_height="fill_parent"
				android:layout_width="wrap_content"
				android:layout_gravity="center_vertical"
				android:src="@drawable/icon_mini"/>
		</LinearLayout>
		<TextView
			android:id="@+id/main_app_title"
			android:layout_width="wrap_content"
			android:layout_height="fill_parent"
			android:layout_marginLeft="10sp"
			android:layout_weight="1"
			android:textSize="20sp"
			android:textColor="#F9F9F9"
			android:gravity="center_vertical"
			android:text="@string/settings_title"
			/>
	</LinearLayout>	
	<LinearLayout
		android:id="@+id/content"
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_weight="1"
		android:background="#F9F9F9">
		<ScrollView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1">
			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">
				<CheckBox
					android:text="@string/settings_own_networks"
					android:id="@+id/settings_own"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:textSize="18dip"
					android:textColor="#000"/>
				<TextView
					android:textColor="#000"
					android:id="@+id/TextView01"
					android:textSize="14dip"
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:layout_marginLeft="8sp"
					android:layout_gravity="fill_horizontal"
					android:text="@string/settings_own_networks_desc"/>
				<CheckBox
					android:text="@string/settings_offline_mode"
					android:id="@+id/settings_offline"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:textSize="18dip"
					android:textColor="#000"/>
				<TextView
					android:text="@string/settings_offline_mode_desc"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:textSize="14dip"
					android:layout_gravity="fill_horizontal"
					android:textColor="#000"/>			
				<CheckBox
					android:text="@string/settings_vibrate"
					android:id="@+id/settings_vibrate"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:textSize="18dip"
					android:textColor="#000"/>
			</LinearLayout>
		</ScrollView>
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
			<Button
				android:text="@string/settings_save"
				android:id="@+id/settings_save"
				android:layout_width="wrap_content"
				android:layout_weight="0.5"
				android:layout_height="wrap_content"/>
			<Button
				android:id="@+id/settings_cancel"
				android:text="@string/gen_cancel"
				android:layout_width="wrap_content"
				android:layout_weight="0.5"
				android:layout_height="wrap_content"/>
		</LinearLayout>
	</LinearLayout>
</LinearLayout>
