<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_height="fill_parent"
	android:layout_width="fill_parent">
	<LinearLayout
		android:id="@+id/main_title_bar"
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="48sp"
		android:background="@drawable/main_title_bg">
		<LinearLayout
			android:orientation="horizontal"
			android:layout_height="48sp"
			android:gravity="center_vertical"
			android:layout_width="wrap_content">
			<ImageView
				android:layout_height="fill_parent"
				android:layout_width="wrap_content"
				android:layout_gravity="center_vertical"
				android:src="@drawable/icon_mini"/>
		</LinearLayout>
		<TextView
			android:id="@+id/main_app_title"
			android:layout_width="wrap_content"
			android:layout_height="fill_parent"
			android:layout_marginLeft="10sp"
			android:layout_weight="1"
			android:textSize="20sp"
			android:textColor="#F9F9F9"
			android:gravity="center_vertical"
			android:text="@string/synchro_title"
			/>
	</LinearLayout>	
	<LinearLayout
		android:id="@+id/content"
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_weight="1"
		android:gravity="center_vertical"
		android:background="#F9F9F9">
		<LinearLayout
			android:id="@+id/synchro_waiting"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:gravity="center_horizontal">
			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10sp"
				android:layout_marginRight="10sp"
				android:orientation="vertical">
				<LinearLayout
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:gravity="center_vertical"
					android:orientation="horizontal">
					<ImageView
						android:id="@+id/synchro_waiting_ani"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:src="@drawable/wait"/>
					<TextView
						android:id="@+id/synchro_status"
						android:text="@string/synchro_syncing"
						android:textColor="#000000"
						android:textSize="20sp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"/>
				</LinearLayout>
				<ProgressBar
					android:id="@+id/synchro_progress"
					android:indeterminate="true"
					style="?android:attr/progressBarStyleHorizontal"
					android:max="100"
					android:progress="0"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"/>
			</LinearLayout>
		</LinearLayout>
	</LinearLayout>
	<LinearLayout
		android:id="@+id/synchro_summup"
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_weight="1"
		android:background="#F9F9F9"
		android:visibility="gone">
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:layout_weight="1">
			<TextView
				android:textColor="#000000"
				android:textSize="22sp"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="fill_horizontal"
				android:text="@string/synchro_summup_desc"/>
			<TextView
				android:id="@+id/synchro_total_spots"
				android:textColor="#000000"
				android:textSize="22sp"
				android:layout_width="fill_parent"
				android:layout_gravity="fill_horizontal"
				android:layout_height="wrap_content"
				android:layout_marginTop="8sp"
				android:text=""/>
		</LinearLayout>
		<Button
			android:id="@+id/synchro_ok_btn"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/gen_ok"/>
	</LinearLayout>
</LinearLayout>
