<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_height="fill_parent"
	android:layout_width="fill_parent">
	<LinearLayout
		android:id="@+id/main_title_bar"
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="48sp"
		android:background="@drawable/main_title_bg">
		<LinearLayout
			android:orientation="horizontal"
			android:layout_height="48sp"
			android:gravity="center_vertical"
			android:layout_width="wrap_content">
			<ImageView
				android:layout_height="fill_parent"
				android:layout_width="wrap_content"
				android:layout_gravity="center_vertical"
				android:src="@drawable/icon_mini"/>
		</LinearLayout>
		<TextView
			android:id="@+id/main_app_title"
			android:layout_width="wrap_content"
			android:layout_height="fill_parent"
			android:layout_marginLeft="10sp"
			android:layout_weight="1"
			android:textSize="20sp"
			android:textColor="#F9F9F9"
			android:gravity="center_vertical"
			android:text="@string/app_name"
			/>
	</LinearLayout>	
	<LinearLayout
		android:id="@+id/content"
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_weight="1"
		android:background="#F9F9F9"
		android:gravity="center_vertical">
		<LinearLayout
			android:id="@+id/main_scanner"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1">
			<ListView  
			    android:id="@android:id/list"
			    android:layout_width="fill_parent" 
			    android:layout_height="fill_parent"
			    android:background="#F9F9F9"
			    android:cacheColorHint="#F9F9F9"
			    android:listSelector="@drawable/custom_list"
			    />
		 </LinearLayout>
		 <LinearLayout
		 	android:id="@+id/main_splash_screen"
		 	android:orientation="vertical"
		 	android:layout_width="fill_parent"
		 	android:layout_height="fill_parent"
		 	android:gravity="center_horizontal"
		 	android:visibility="gone">
			 <ImageView
			 	android:id="@+id/splash"
			 	android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="0.5"
				android:src="@drawable/splash"/>
			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="0.5"
				android:orientation="horizontal"
				android:gravity="center_vertical">
				<LinearLayout
					android:layout_height="fill_parent"
					android:layout_width="wrap_content"
					android:orientation="vertical"
					android:gravity="center_vertical">
					<ImageView
						android:id="@+id/main_splash_loading"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:src="@drawable/wait"/>
				</LinearLayout>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="fill_parent"
					android:text="@string/splash_loading"
					android:textColor="#202020"
					android:textSize="20sp"
					android:gravity="center_vertical"/>
			</LinearLayout>
		 </LinearLayout>
		 <LinearLayout
		 	android:id="@+id/main_upgrade"
		 	android:orientation="vertical"
		 	android:layout_width="fill_parent"
		 	android:layout_height="fill_parent"
		 	android:visibility="gone">
		 	<TextView
		 		android:layout_width="fill_parent"
		 		android:layout_height="wrap_content"
		 		android:text="New version available !"
		 		android:textSize="20sp"
		 		android:textColor="#000000"
		 		android:gravity="center_horizontal"/>
		 	<ScrollView
		 		android:layout_width="fill_parent"
		 		android:layout_height="wrap_content"
		 		android:layout_weight="1">
		 		<TextView
		 			android:id="@+id/main_upgrade_changelog"
		 			android:layout_width="fill_parent"
		 			android:layout_height="wrap_content"
		 			android:textSize="16sp"
		 			android:textColor="#101010"
		 			android:text=""/>
		 	</ScrollView>
		 	<LinearLayout
		 		android:layout_width="fill_parent"
		 		android:layout_height="wrap_content"
		 		android:orientation="horizontal">
		 		<Button
		 			android:id="@+id/main_upgrade_do_upgrade"
		 			android:layout_width="wrap_content"
		 			android:layout_height="wrap_content"
		 			android:layout_weight="0.5"
		 			android:text="@string/main_upgrade_upgrade"/>
		 		<Button
		 			android:id="@+id/main_upgrade_cancel"
		 			android:layout_width="wrap_content"
		 			android:layout_height="wrap_content"
		 			android:layout_weight="0.5"
		 			android:text="@string/gen_cancel"/>
			</LinearLayout>
		</LinearLayout>
		<LinearLayout
			android:id="@+id/main_about"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:orientation="vertical"
			android:visibility="gone">
			<ScrollView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1">
				<TextView
					android:id="@+id/main_about_text"
					android:layout_width="fill_parent"
					android:layout_height="fill_parent"
					android:text=""
					android:textSize="15sp"
					android:textColor="#202020"/>
			</ScrollView>
			<Button
				android:id="@+id/main_connect_ok"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="OK"/>
		</LinearLayout>
		<LinearLayout
			android:id="@+id/main_connect"
			android:background="#E0E0E0"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:visibility="visible">
			<LinearLayout
		 		android:layout_width="fill_parent"
		 		android:layout_height="2dip"
		 		android:background="#202020"/>
			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textColor="#202020"
					android:textSize="15sp"
					android:textStyle="bold"
					android:text="@string/main_connect_essid"/>
				<TextView
					android:id="@+id/main_connect_essid"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text=""
					android:textSize="15sp"
					android:textColor="#202020"/>
			</LinearLayout>
			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:layout_weight="1">
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textColor="#202020"
					android:textSize="15sp"
					android:textStyle="bold"
					android:text="@string/main_connect_key"/>
				<TextView
					android:id="@+id/main_connect_key"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text=""
					android:textSize="15sp"
					android:textColor="#202020"/>
			</LinearLayout>
			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">
				<LinearLayout
					android:orientation="vertical"
					android:layout_width="wrap_content"
					android:layout_height="fill_parent"
					android:gravity="center_vertical">
					<ImageView
						android:id="@+id/main_connect_status"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:src="@drawable/disconnect"/>
				</LinearLayout>
				<TextView
					android:id="@+id/main_connect_status_txt"
					android:layout_width="wrap_content"
					android:layout_height="fill_parent"
					android:layout_weight="1"
					android:gravity="center_vertical"
					android:textColor="#202020"
					android:textSize="15sp"
					android:textStyle="bold"
					android:text=""/>
			</LinearLayout>
			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">
				<Button
					android:id="@+id/main_connect_do"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="0.5"
					android:text="@string/main_connect_connect"/>
				<Button
					android:id="@+id/main_connect_cancel"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="0.5"
					android:text="@string/gen_cancel"/>
			</LinearLayout>
		</LinearLayout>
		<LinearLayout
			android:id="@+id/main_status"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/bg2">
			<TextView
				android:id="@+id/main_status_text"
				android:layout_width="wrap_content"
				android:layout_height="fill_parent"
				android:gravity="center_vertical"
				android:textColor="#000"
				android:textSize="16sp"
				android:layout_marginLeft="8sp"
				android:text="@string/scanner_status_default"/>
		</LinearLayout>
	</LinearLayout>
</LinearLayout>
	